Fix CORS for multiple origins